--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Project04</string>
+    <string-array name="sort">
+        <item>Color</item>
+        <item>Brick</item>
+        <item>Stud</item>
+    </string-array>
 </resources>
